# fastapi-ecommerce

./: .env.example  pyproject.toml
alembic/: env.py
alembic/versions/: d9105efa79a8_inittial_migrate.py
app/: main.py
app/configs/: __init__.py  database.py  logging.py  setting.py
app/crud/: order.py  payment.py  product.py  user.py
app/middlewares/: logging_middleware.py
app/models/: BaseModel.py  Order.py  Payment.py  Product.py  User.py  __init__.py
app/routers/: __init__.py  auth.py  order.py  payment.py  product.py  user.py
app/schemas/: __init__.py  order.py  payment.py  product.py  user.py
app/utils/: jwt_utils.py
